2007-09-18  Michael Natterer  <mitch@gimp.org>

	* app/gui/gtk-macmenu.[ch]: removed...

	* app/gui/ige-mac-menu.[ch]: ...and replaced by new versions which
	don't use the GTK+ namespace.

	* app/gui/Makefile.am
	* app/gui/gui.c: changed accorgingly.

2007-09-18  Michael Natterer  <mitch@gimp.org>

	* configure.in: replaced HAVE_GDK_QUARTZ conditional by
	--disable-toolbox-menu configure switch which defaults to "yes"
	normally and to "no" on quartz.

	* app/widgets/gimptoolbox.c: changed #ifdef accordingly.

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-menu-path.[ch]: new generic machanism to map
	around menu locations. If ENABLE_TOOLBOX_MENU is false, map
	"Xtns" and "Help" from <Toolbox> to <Image>.

	* app/plug-in/gimppluginmanager-menu-branch.c
	* app/plug-in/gimppluginprocedure.c: run all menu paths through the
	new mapping function.

	* menus/Makefile.am
	* menus/menus.xsl
	* menus/image-menu.xml.in: add both the "Xtns" and "Help" menus to
	the image menubar if TOOLBOX_MENU is false.

2007-09-18  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb: canonicalize the name of the
	thumbnail loader procedure too. Fixes bug #477917.

	* app/pdb/fileops_cmds.c: regenerated.

2007-09-17  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/common/psd-load.c (do_layer_record, load_image):
	Applied slightly modified patch from John Marshall that drops
	adjustment and layer group layers when loading PSD files. Fixes
	bug #474718.

2007-09-17  Nils Philippsen  <nphilipp@redhat.com>

	* plug-ins/common/pcx.c (load_image): verify that the bytesperline
	header field (number of bytes to allocate per plane and line)
	isn't less than the width of the image (bug #477802).

2007-09-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockbook.[ch]: when DND-hovering > 500ms over a
	notebook tab, switch to that tab's page. Suggested by Saul Goode.

2007-09-17  Sven Neumann  <sven@gimp.org>
